--- a/main.css
+++ b/main.css
@@ -12,7 +12,7 @@ p {
 	background-size:cover;
 	background-repeat: no-repeat;
 	background-position: center;
-	background: url(IMG_20230418_005114_850.jpg) no-repeat center/cover;
+	background: url(img.jpg) no-repeat center/cover;
 	background-attachment: fixed;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: rgb(225, 225, 255, 0);
